--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 .venv
 __pycache__
 
+_trouble/Generated RAG AgentConversation.md
+_trouble/rags_error_build_nickknyc.zip
+_trouble/terminal .txt
+cache/
+cache/agents/agent_ids.json
