--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,2 @@
-import os
-metaphor_key = os.getenv('METAPHOR_KEY')
-openai_key = os.getenv('OPENAI_API_KEY')
-openai_api_key = os.getenv('OPENAI_API_KEY')
+metaphor_key = "a59aebaa-49c8-4149-831b-c4e0d780d8c6"
+metaphor-key = "a59aebaa-49c8-4149-831b-c4e0d780d8c6"
