--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 metaphor_key = "a59aebaa-49c8-4149-831b-c4e0d780d8c6"
 metaphor-key = "a59aebaa-49c8-4149-831b-c4e0d780d8c6"
-openapi_key = "sk-DXk3zQPkfh1gSz2px1XT3BlbkFJVZ6hrwvZPQXuZXvbC73p"
+foo = "sk-DXk3zQPkfh1gSz2px1XT3BlbkFJVZ6hrwvZPQXuZXvbC73p"
